--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,11 @@
     "builds": [
         {
             "src": "index.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "buildCommand": "./install_algokit.sh && pip install -r requirements.txt",
+                "pythonVersion": "3.12"
+            }
         }
     ],
     "routes": [
