--- a/server/render.yaml
+++ b/server/render.yaml
@@ -7,6 +7,6 @@ services:
     repo: https://github.com/Sayyam-Karnavat/algorand_python_code_compiler/tree/main/server
     branch: main
     buildCommand: pip install -r requirements.txt
-    startCommand: python wsgi.py
+    startCommand: python app.py
     envVars:
       - fromDotEnv: true
